--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <style>
-        h1{
+        /* h1{
             font-size:65px;
             color: #fc9700;
             font-family: sans-serif;
@@ -41,7 +43,7 @@
         }
         #list3{
            background-color: hsl(60, 5%, 30%);
-        }
+        } */
 
     </style>
   </head>
